[metadata]
name = vela
version = 0.0.13
author = Suneel Freimuth
author_email = suneelfreimuth1@gmail.com
description = A simple framework for Gemini servers inspired by Flask and Express.js.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SuneelFreimuth/vela
project_urls =
    Bug Tracker = https://github.com/SuneelFreimuth/vela/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
